[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slidown"
version = "0.1.0"
description = "Convert Markdown to self-contained HTML presentation slides"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "izag8216" },
]
keywords = ["markdown", "slides", "presentation", "cli", "html"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "markdown>=3.5",
    "pygments>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "watchdog>=3.0",
]
serve = [
    "watchdog>=3.0",
]

[project.scripts]
slidown = "slidown.cli:main"

[project.urls]
Homepage = "https://github.com/izag8216/slidown"
Repository = "https://github.com/izag8216/slidown"
Issues = "https://github.com/izag8216/slidown/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/slidown"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=slidown --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/slidown"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
